--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -60,19 +60,21 @@ build-eglibc: $(EGLIBC_DIR)/libc/build/Makefile
 .PHONY: build-musl
 build-musl: musl/libc/libc.a
 musl/config.mak:
-	cd musl && ./configure
+	cd musl && CFLAGS=-g ./configure
 
 musl/libc/libc.a: musl/config.mak
 	$(MAKE) -C musl
 
 ifeq ($(KERNEL),Linux)
 CONFIG_MK += \nLIBC_A := $(realpath $(dir $(THIS_MAKEFILE)))/musl/lib/libc.a\n
+CONFIG_MK += \nLIBC_CFLAGS := -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/arch/$(shell gcc -print-multiarch | sed 's/-.*//') -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/arch/generic -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/obj/include -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/include \n
 else
 ifeq ($(KERNEL),FreeBSD) # FIXME: check this
 CONFIG_MK += \nLIBC_A := /usr/lib/libc_pic.a\n
+CONFIG_MK += \nLIBC_CFLAGS :=
 endif
 endif
-varlist += LIBC_A
+varlist += LIBC_A LIBC_CFLAGS
 
 # ----------------------------we need some instruction decoder or other
 
@@ -138,7 +140,7 @@ install-binutils: build-binutils
 
 .PHONY: build-xed
 build-xed: $(MBUILD_DIR)
-	cd xed && ./mfile.py install --install-dir=build --no-encoder --extra-flags='-fPIC'
+	cd xed && ./mfile.py install --install-dir=build --no-encoder --extra-flags='-fPIC -ffreestanding'
 
 CONFIG_MK +=\nXED_DIR ?= $(CONTRIB)/xed/build\n
 CONFIG_MK +=\nXED_A ?= $(CONTRIB)/xed/build/lib/libxed.a\n
