--- a/example/Makefile
+++ b/example/Makefile
@@ -3,12 +3,32 @@ srcroot := $(realpath $(dir $(THIS_MAKEFILE)))/..
 
 SYS := $(shell uname -s | tr A-Z a-z )
 
-LD_SO ?= /lib64/ld-linux-x86-64.so.2  # HACK: sysdep
+# for debugging
+CFLAGS += -save-temps
+
+ARCH ?= $(shell gcc -print-multiarch | sed 's/-.*//' )
+ifeq ($(ARCH),i386)
+LD_SO ?= /lib/ld-linux.so.2
+else
+ifeq ($(ARCH),x86_64)
+LD_SO ?= /lib64/ld-linux-x86-64.so.2
+endif
+endif
+
+ifeq ($(LD_SO),)
+$(error Could not determine ld.so pathname (from architecture $(ARCH)).)
+endif
+
+UNWIND_MACHINE ?= $(ARCH)
+ifeq ($(UNWIND_MACHINE),i386)
+UNWIND_MACHINE := x86
+endif
 
 CONTRIB := $(srcroot)/contrib
 CONFIG ?= $(CONTRIB)/config.mk
+DONALD ?= $(srcroot)/contrib/donald
 
-default: trace-syscalls.so
+default: trace-syscalls.so trace-syscalls-ld.so
 
 $(CONTRIB)/config.mk:
 	$(MAKE) -C $(CONTRIB)
@@ -18,6 +38,7 @@ LIBC_A ?= /usr/lib/libc_pic.a
 endif
 include $(CONFIG)
 
+CFLAGS += $(LIBC_CFLAGS)
 CFLAGS += -DSYSTRAP_DEFINE_FILE
 
 ifeq ($(LIBRUNT_DIR),)
@@ -30,7 +51,9 @@ endif
 
 CFLAGS += -g 
 CFLAGS += -Wall -Wno-unused-label -Wno-comment
+ifeq ($(DEBUG),)
 CFLAGS += -O2
+endif
 CFLAGS += -fPIC
 CFLAGS += -ffreestanding -fno-omit-frame-pointer
 CFLAGS += -I$(srcroot)/include
@@ -41,6 +64,9 @@ syscall-names.o: $(SYS)-syscall-macros.h
 
 # for dlmalloc.c
 vpath %.c $(srcroot)/contrib
+
+# for donald things
+vpath %.c $(DONALD)/src
 
 C_SRC := $(wildcard *.c)
 C_DEPS := $(patsubst %.c,.%.d,$(C_SRC))
@@ -63,7 +89,7 @@ dlmalloc.a: dlmalloc.o
 
 # This is a quick but incomplete way to build a number->name mapping
 linux-syscall-macros.h:
-	( /usr/bin/cpp -E -dM -o - /usr/include/asm/unistd.h </dev/null | \
+	( /usr/bin/cpp -E -dM -o - /usr/include/`gcc -print-multiarch`/asm/unistd.h </dev/null | \
            grep '#define *__NR_' | sort | uniq | \
            sed -r 's/^#define *__NR_([^[:blank:]]*)[[:blank:]]*([0-9]*)/#ifdef SYS_\1\nSYSCALL(\1, \2)\n#endif/') > "$@" || (rm -f "$@"; false)
 freebsd-syscall-macros.h:
@@ -78,12 +104,15 @@ syscall-macros.h: $(SYS)-syscall-macros.h
 # functions we might want to call from the debugger are actually linked in
 trace-syscalls.so: LDLIBS := -Bstatic \
 	$(srcroot)/lib/libsystrap.a \
-	-Wl,--whole-archive $(LIBRUNT_DIR)/lib/librunt_preload.a -Wl,--no-whole-archive
+	-Wl,--whole-archive $(LIBRUNT_DIR)/lib/librunt_preload.a -Wl,--no-whole-archive \
+	-ldl
 
+# FIXME: what's the right way to pull in libgcc.a? It seems that
+# the compiler should do it for us, but for some reason it doesn't.
 trace-syscalls.so: LDLIBS += \
 	dlmalloc.a \
 	$(LD_SO) \
-	$(LIBC_A) -lunwind-x86_64 -lunwind -lgcc_s -lpthread
+	$(LIBC_A) -lunwind-$(UNWIND_MACHINE) -lunwind -lpthread -lgcc
 
 # we used to insist -Wl,--hash-style=sysv here, but relf.h now groks GNU-style
 trace-syscalls.so: LDFLAGS += \
@@ -101,18 +130,42 @@ trace-syscalls.so: LDFLAGS += \
 # don't use lazy binding -- it's bad if we've removed exec permission
 trace-syscalls.so: LDFLAGS += \
 	-Wl,-z,now -fno-lto -Wl,--exclude-libs=ALL
+# we define our own, simpler __init_tp
+trace-syscalls.so: LDFLAGS += -Wl,--wrap,__init_tp
+trace-syscalls-ld.so: LDFLAGS += -Wl,--wrap,__init_tp
 
 trace-syscalls.so: trap-syscalls.o syscall-names.o dlmalloc.a
 
 trace-syscalls.so: $(srcroot)/lib/libsystrap.a
-	$(CC) -shared -Bsymbolic \
+	$(CC) -shared -Bstatic -static-libgcc \
 		-fuse-ld=gold \
 		-Wl,-h,$@ \
 		-o "$@" $(filter-out %.a,$+) \
 		$(LDFLAGS) $(LDLIBS)
 
+OBJS := premain.o main.o entry.o load.o
+
+$(OBJS): CFLAGS += -DDONALD_NAME=\"trace-syscalls-ld\" \
+  -DCHAIN_LOADER
+# FIXME: localize all global symbols except maybe _start?
+trace-syscalls-ld.so: trace-syscalls-ld.lds $(OBJS)
+	$(CC) $(CFLAGS) -fuse-ld=bfd \
+            -Bsymbolic -nostdlib -nostartfiles -shared -o "$@" \
+            $(filter-out %.lds,$+) \
+            -Wl,-Bstatic $(srcroot)/src/libsystrap.a $(LIBC_A) -Wl,-Bsymbolic \
+            -T $(filter %.lds,$+) -Wl,-soname=ld-linux.so.2 
+
+trace-syscalls-ld.lds: $(shell which ld) $(THIS_MAKEFILE)
+	USE_LD=ld.bfd $(CC) -fuse-ld=bfd -nostdlib -nostartfiles -shared \
+      -Wl,--verbose 2>&1 |  \
+        LC_ALL=C \
+          sed -e '/^=========/,/^=========/!d;/^=========/d'    \
+              -e 's/\. = .* + SIZEOF_HEADERS;/& _begin = . - SIZEOF_HEADERS;/' \
+              -e 's/\. = DATA_SEGMENT_ALIGN.*/. = DATA_SEGMENT_ALIGN (CONSTANT (COMMONPAGESIZE), CONSTANT (COMMONPAGESIZE));/' \
+          > "$@" || (rm -f $@; false)
+
 .PHONY: clean
 clean:
-	rm -f trace-syscalls.so
+	rm -f trace-syscalls.so trace-syscalls-ld.so
 	rm -f *.o *.a
 	rm -f .*.d
