--- a/src/Makefile
+++ b/src/Makefile
@@ -22,7 +22,8 @@ CFLAGS += -Wall -Wno-unused-label -Wno-comment
 CFLAGS += -O2
 CFLAGS += -fPIC
 CFLAGS += -ffreestanding -fno-omit-frame-pointer
-
+# HACK temp
+CFLAGS += -save-temps
 # the decoder we use nowadays is the "official" Intel one
 CFLAGS += -DUSE_XED
 
@@ -44,8 +45,6 @@ C_DEPS := $(patsubst %.c,.%.d,$(C_SRC))
 CC_DEPS := $(patsubst %.cc,.%.d,$(CC_SRC))
 DEPS := $(C_DEPS) $(CC_DEPS)
 OBJS := $(patsubst %.c,%.o,$(C_SRC)) $(patsubst %.cc,%.o,$(CC_SRC)) $(patsubst %.s,%.o,$(S_SRC))
-
-DEPS += .trap-syscalls-exec.d
 
 $(CC_DEPS): .%.d: %.cc
 	$(CXX) -MM $(CXXFLAGS) $+ > "$@" || rm -f "$@"
