First cut at a bootstrapping approach to execve()
Also fix problem where replacement mmap-family symbols were coming out null.

--- a/example/Makefile
+++ b/example/Makefile
@@ -25,6 +25,8 @@ CONTRIB := $(srcroot)/contrib
 CONFIG ?= $(CONTRIB)/config.mk
 DONALD ?= $(srcroot)/contrib/donald
 
+CFLAGS += -DOUR_LDSO_DIR="\"$(shell pwd)/\""
+
 default: trace-syscalls.so trace-syscalls-ld.so
 
 $(CONTRIB)/config.mk:
