--- a/test/client/Makefile
+++ b/test/client/Makefile
@@ -3,3 +3,7 @@ default: #$(foreach t,hello true getpid time read write,run-$(t).stamp)
 	@true # we have no client tests right now
 
 run-%.stamp:
+
+.PHONY: clean
+clean:
+	@true
