Make our build self-sufficient, not using any ambient headers from the host environment if we can help it... we just use certainly specific paths that are mostly libc-independent

--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -58,16 +58,19 @@ build-eglibc: $(EGLIBC_DIR)/libc/build/Makefile
 	CFLAGS="-g -O1 -fPIC -DPIC" CPPFLAGS="" $(MAKE) -C $(EGLIBC_DIR)/libc/build
 
 .PHONY: build-musl
-build-musl: musl/libc/libc.a
+build-musl: musl/libc/libc.a host-includes
 musl/config.mak:
 	cd musl && CFLAGS=-g ./configure
 
 musl/libc/libc.a: musl/config.mak
 	$(MAKE) -C musl
 
+host-includes:
+	mkdir -p $@ && ln -sf -t $@ /usr/include/linux /usr/include/asm-generic /usr/include/$(shell gcc -print-multiarch)/asm
+
 ifeq ($(KERNEL),Linux)
 CONFIG_MK += \nLIBC_A := $(realpath $(dir $(THIS_MAKEFILE)))/musl/lib/libc.a\n
-CONFIG_MK += \nLIBC_CFLAGS := -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/arch/$(shell gcc -print-multiarch | sed 's/-.*//') -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/arch/generic -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/obj/include -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/include \n
+CONFIG_MK += \nLIBC_CFLAGS := -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/arch/$(shell gcc -print-multiarch | sed 's/-.*//') -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/arch/generic -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/obj/include -I$(realpath $(dir $(THIS_MAKEFILE)))/musl/include -I$(realpath $(dir $(THIS_MAKEFILE)))/host-includes \n
 else
 ifeq ($(KERNEL),FreeBSD) # FIXME: check this
 CONFIG_MK += \nLIBC_A := /usr/lib/libc_pic.a\n
